--- a/vault.html
+++ b/vault.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaultt</title>
-    <script src="vault.js" defer></script>
+    <script src="vault" defer></script>
 </head>
 <body>
     
